@@ -1,3 +1,8 @@
+2012-12-17  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Matroska reader: Fixed finding the "segment
+	info" element if it is located behind the clusters.
+
 2012-12-16  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: MP3 parser code: Fixed skipping ID3 tags so
